# looneytube-embedded

./: Cargo.toml  README.md
src/: entities.rs  errors.rs  helpers.rs  main.rs  templates.rs
src/entities/: category.rs  video.rs
src/helpers/: base_dir.rs
